DIAM-1824 fix reset password translate

--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/reset.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/reset.ejs
@@ -10,7 +10,7 @@
            placeholder="<%= __('diamante_front.session.template.placeholder.new_password') %>">
   </div>
   <p><%= __('diamante_front.session.template.back.reset', {url: '#login'}) %></p>
-  <button type="submit" class="btn btn-primary btn-lg btn-block js-submit" tabindex="2"><%= __('diamante_front.session.template.button.set_password') %></button>
+  <button type="submit" class="btn btn-primary btn-lg btn-block js-submit" tabindex="2"><%= __('diamante_front.session.template.button.new_password') %></button>
 </form>
 <% } else { %>
 <form role="form">
