--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Ticket/list.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Ticket/list.less
@@ -123,6 +123,12 @@
         width: 14px;
       }
     }
+    @media (max-width: @screen-xs-max) {
+      font-size: 24px;
+      td {
+        padding: @table-cell-padding * 6 @table-cell-padding;
+      }
+    }
   }
 
 
