--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/view.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/view.ejs
@@ -6,9 +6,9 @@
     </div>
     <div class="col-xs-6 col-sm-4 col-sm-push-8 col-md-3 col-md-push-9 ticket-action">
         <% if(status !== 'closed'){ %>
-        <button type="button" class="btn btn-primary btn-block js-close-ticket">Resolve Ticket</button>
+        <button type="button" class="btn btn-primary btn-block js-close-ticket"><%= __('diamante_front.ticket.template.resolve_button') %></button>
         <% } else { %>
-        <button type="button" class="btn btn-primary btn-block js-open-ticket">Reopen Ticket</button>
+        <button type="button" class="btn btn-primary btn-block js-open-ticket"><%= __('diamante_front.ticket.template.reopen_button') %></button>
         <% } %>
     </div>
     <div class="col-xs-12 col-sm-8 col-sm-pull-4 col-md-9 col-md-pull-3 ticket-title">
