--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Header/templates/header.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Header/templates/header.ejs
@@ -1,7 +1,7 @@
 <div class="row header-links">
   <a href="<%= baseUrl %>" class="logo col-sm-3 col-xs-4">
-    <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk" class="hidden-xs" />
-    <img src="<%= basePath %>/bundles/diamantefront/img/logo_xs.png" alt="DiamanteDesk" class="logo-xs visible-xs-block" />
+    <img src="<%= logo %>" alt="<%= title %>" class="hidden-xs" />
+    <img src="<%= logoXs %>" alt="<%= title %>" class="logo-xs visible-xs-block" />
   </a>
   <div class="col-sm-3 header-create-ticket">
     <div class="create-ticket form-group form-group-lg">
