[DIAM-404] Hide header and breadcrumbs while scrolling

--- a/src/Diamante/DeskBundle/Resources/public/css/diam.less
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.less
@@ -481,3 +481,15 @@ div[id^="grid-audit-grid"] td.number-cell {
 .diam-user-type.diamante {
     background-color: #1D2E81;
 }
+
+.nav-hide {
+    position: absolute;
+    width: 100%;
+    transform: translateY(-100%);
+}
+
+#oroplatform-header {
+    transition: transform .2s;
+}
+
+
