--- a/src/Diamante/DeskBundle/Resources/views/Ticket/rightPanel.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/rightPanel.html.twig
@@ -1,5 +1,5 @@
 {% block sidebar %}
-    <div class="form-horizontal">
+    <div class="form-horizontal" id="right-block">
         <div class="responsive-cell responsive-cell-no-blocks">
             {% set detailsBlock = [DiamUI.attributeRow('diamante.desk.attributes.source'|trans, entity.source.getLabel)] %}
             {% set detailsBlock = detailsBlock|merge([DiamUI.attributeRow('diamante.desk.attributes.priority'|trans, entity.priority.getLabel)]) %}
@@ -15,13 +15,16 @@
                 {% set reporterBlock = reporterBlock|merge([DiamUI.attributeRow('oro.user.phone.label'|trans,diamanteUserReporter.getPhone ? diamanteUserReporter.getPhone : 'diamante.desk.common.not_available'|trans)]) %}
             {% endif %}
 
-            {% set assignedBlock = [DiamUI.attributeRow('diamante.desk.attributes.assignee'|trans, entity.assignee ? entity.assignee|oro_format_name : entity.unassignedLabel|trans)] %}
-            {% set assignedBlock = assignedBlock|merge([DiamUI.attributeRow('oro.user.emails.label'|trans, entity.assignee.getEmail) ]) %}
-            {% set assignedBlock = assignedBlock|merge([DiamUI.attributeRow('oro.user.phone.label'|trans, entity.assignee.getPhone ? entity.assignee.getPhone : 'diamante.desk.common.not_available'|trans) ]) %}
+            {% set oroUserAssigned = entity.assignee  %}
+            {% set assignedBlock = [DiamUI.attributeRow('diamante.desk.attributes.assignee'|trans, oroUserAssigned ? oroUserAssigned|oro_format_name : entity.unassignedLabel|trans)] %}
+            {% if oroUserAssigned != null %}
+                {% set assignedBlock = assignedBlock|merge([DiamUI.attributeRow('oro.user.emails.label'|trans, oroUserAssigned.getEmail) ]) %}
+                {% set assignedBlock = assignedBlock|merge([DiamUI.attributeRow('oro.user.phone.label'|trans, oroUserAssigned.getPhone ? oroUserAssigned.getPhone : 'diamante.desk.common.not_available'|trans) ]) %}
+                {% set avatarAssigned = oro_configured_image_url(oroUserAssigned, 'avatar') %}
+            {% else %}
+                {% set avatarAssigned = null %}
+            {% endif %}
 
-            {% set oroUserAssigned = entity.assignee %}
-            {% set authorAssigned = oroUserAssigned|oro_format_name %}
-            {% set avatarAssigned = oro_configured_image_url(oroUserAssigned, 'avatar') %}
 
             {% set sidebarDataBlocks =
                 [
@@ -37,7 +40,7 @@
                 'avatar': avatarReporter
                 },
                 {
-                'id': 'asignee',
+                'id': 'assignee',
                 'title': 'Assigned to',
                 'data': assignedBlock,
                 'avatar': avatarAssigned
@@ -51,20 +54,24 @@
             %}
 
             {% for subblock in sidebarDataBlocks %}
-                {% if subblock.id == 'reporter' %}
-                    <h5 class="user-fieldset"><span>{{ subblock.title }}</span><span class="info-date"></span></h5>
-                {% else %}
-                    <h5 class="user-fieldset"><span>{{ subblock.title }}</span></h5>
-                {% endif %}
-                {% if subblock.avatar is defined %}
-                    {% set defaultAvatar = asset('bundles/oroui/img/info-user.png') %}
-                    <div class="user-avatar">
-                        <img src="{{ (subblock.avatar is defined and subblock.avatar != '' ) ? subblock.avatar : defaultAvatar }}" alt="{{ reporterDisplayName }}">
+                <div class="{{ subblock.id }}-block">
+                    {% if subblock.id == 'reporter' %}
+                        <h5 class="user-fieldset"><span>{{ subblock.title }}</span><span class="info-date"></span></h5>
+                    {% else %}
+                        <h5 class="user-fieldset"><span>{{ subblock.title }}</span></h5>
+                    {% endif %}
+                    {% if subblock.avatar is defined and subblock.avatar %}
+                        {% set defaultAvatar = asset('bundles/oroui/img/info-user.png') %}
+                        <div class="user-avatar">
+                            <img src="{{ (subblock.avatar != '') ? subblock.avatar : defaultAvatar }}" alt="{{ reporterDisplayName }}">
+                        </div>
+                    {% endif %}
+                    <div class="{{ subblock.id }}-info">
+                        {% for curData in subblock.data %}
+                            {{ curData }}
+                        {% endfor %}
                     </div>
-                {% endif %}
-                {% for curData in subblock.data %}
-                    {{ curData }}
-                {% endfor %}
+                </div>
             {% endfor %}
 
         </div>
