--- a/src/Diamante/DeskBundle/Resources/views/Ticket/twoColumnRight.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/twoColumnRight.html.twig
@@ -2,7 +2,7 @@
 
 {% block content_data %}
     <div class="row-fluid" id="wrapper">
-        <div class="span9">
+        <div class="span9 left-block">
             {{ parent() }}
         </div>
         <div class="span3">
