DIAM-1844 Updated installation wizard

--- a/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
+++ b/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
@@ -31,14 +31,18 @@
 
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/oroinstaller/css/style.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/diamantedistribution/css/style.css') }}" />
-    <script type="text/javascript" src="{{ asset('bundles/oroinstaller/lib/jquery-2.0.3.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/oroinstaller/lib/jquery.ajaxQueue.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/components/jquery/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/bowerassets/jquery-ajax-queue/ajaxQueue.min.js') }}"></script>
     {% block javascript %}
     <script type="text/javascript">
         $(function() {
+            $('.progress-bar li:last-child em.fix-bg').width($('.progress-bar li:last-child').width() / 2);
+            $('.progress-bar li:first-child em.fix-bg').width($('.progress-bar li:first-child').width() / 2);
+
             $('form').submit(function () {
                 $(this).find(':submit').attr('disabled', true).addClass('disabled');
             });
+
         });
 
         function ajaxQueue(actions, url) {
@@ -63,44 +67,46 @@
                             aborted = true;
                             jqXHR.abort();
                         }
-                    }
-                }).done(function(data) {
-                    var curRes = typeof data.result != 'undefined' && data.result,
-                        exitCode = typeof data.exitCode != 'undefined' ? data.exitCode : 0,
-                        finRes = finRes || curRes;
+                    },
+                    success: function(data) {
+                        var curRes = typeof data.result != 'undefined' && data.result,
+                            exitCode = typeof data.exitCode != 'undefined' ? data.exitCode : 0,
+                            finRes = finRes || curRes;
 
-                    stepCon
-                        .removeClass('icon-wait')
-                        .addClass('icon-' + (curRes ? (exitCode == 0 ? 'yes' : 'warning') : 'no'))
-                        .closest('tr')
+                        stepCon
+                            .removeClass('icon-wait')
+                            .addClass('icon-' + (curRes ? (exitCode == 0 ? 'yes' : 'warning') : 'no'))
+                            .closest('tr')
                             .find('td:last').text(
-                                curRes
-                                    ? (exitCode == 0 ? '{{ 'passed'|trans }}' : '{{ 'skipped'|trans }}')
-                                    : '{{ 'failed'|trans }}'
-                            ).end()
-                        .closest('tr').next()
+                            curRes
+                                ? (exitCode == 0 ? '{{ 'passed'|trans }}' : '{{ 'skipped'|trans }}')
+                                : '{{ 'failed'|trans }}'
+                        ).end()
+                            .closest('tr').next()
                             .find('td:last').text('{{ 'progress'|trans }}').end()
                             .find('span').addClass('icon-wait');
 
-                    if (i == actions.length - 1 && finRes) {
-                        $('a.back').removeClass('disabled');
-                        $('a.primary').removeClass('disabled').attr('href', url);
-                    }
-                }).fail(function() {
-                    if (aborted) {
-                        stepCon
-                            .removeClass('icon-wait')
-                            .addClass('icon-warning')
-                            .closest('tr').find('td:last').text('{{ 'skipped'|trans }}');
-                    } else {
-                        finRes = false;
-                        stepCon
-                            .removeClass('icon-wait')
-                            .addClass('icon-no')
-                            .closest('tr').find('td:last').text('{{ 'failed'|trans }}');
-                    }
-                    if (i == actions.length - 1) {
-                        $('a.back').removeClass('disabled');
+                        if (i == actions.length - 1 && finRes) {
+                            $('a.back').removeClass('disabled');
+                            $('a.primary').removeClass('disabled').attr('href', url);
+                        }
+                    },
+                    error: function() {
+                        if (aborted) {
+                            stepCon
+                                .removeClass('icon-wait')
+                                .addClass('fa-warning')
+                                .closest('tr').find('td:last').text('{{ 'skipped'|trans }}');
+                        } else {
+                            finRes = false;
+                            stepCon
+                                .removeClass('icon-wait')
+                                .addClass('icon-no')
+                                .closest('tr').find('td:last').text('{{ 'failed'|trans }}');
+                        }
+                        if (i == actions.length - 1) {
+                            $('a.back').removeClass('disabled');
+                        }
                     }
                 });
             });
