DIAM-1866 reimplement tags for branches

--- a/src/Diamante/DeskBundle/Resources/views/Branch/create.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Branch/create.html.twig
@@ -13,8 +13,7 @@
     form_row(form.name),
     form_row(form.key),
     form_row(form.defaultAssignee),
-    form_row(form.logoFile, {'attr': {'accept' : 'image/jpeg, image/png'}}),
-    form_row(form.tags)
+    form_row(form.logoFile, {'attr': {'accept' : 'image/jpeg, image/png'}})
     ]
     }
     ]
