--- a/src/Diamante/DeskBundle/Resources/views/Branch/update.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Branch/update.html.twig
@@ -54,8 +54,7 @@
     'data': [
     form_row(form.name),
     form_row(form.defaultAssignee),
-    logo,
-    form_row(form.tags)
+    logo
     ]
     }
     ]
