--- a/src/Diamante/DeskBundle/Resources/views/Branch/edit.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Branch/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
-{% form_theme form with ['OroAddressBundle:Include:fields.html.twig', 'OroFormBundle:Form:fields.html.twig', 'OroTagBundle:Form:fields.html.twig'] %}
+{% form_theme form with ['OroAddressBundle:Include:fields.html.twig', 'OroFormBundle:Form:fields.html.twig'] %}
 
 {% oro_title_set({params : {"%branch.name%": form.vars.value.name|default('N/A') }}) %}
 
