--- a/src/Diamante/DeskBundle/Resources/views/Ticket/create.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/create.html.twig
@@ -1,6 +1,6 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
 {% import 'DiamanteDeskBundle:Ticket:macros.html.twig' as Helper %}
-{% form_theme form with ['OroFormBundle:Form:fields.html.twig', 'OroTagBundle:Form:fields.html.twig'] %}
+{% form_theme form with ['OroFormBundle:Form:fields.html.twig'] %}
 {% set formAction = path('diamante_ticket_create') %}
 {% block head_script %}
     {{ parent() }}
@@ -43,8 +43,7 @@
     form_row(form.source),
     form_row(form.reporter),
     form_row(form.assignee),
-    form_row(form.attachmentsInput),
-    form_row(form.tags)
+    form_row(form.attachmentsInput)
     ]
     }
     ]
