--- a/src/Diamante/DeskBundle/Resources/views/Ticket/update.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/update.html.twig
@@ -1,6 +1,6 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
 {% import 'DiamanteDeskBundle:Ticket:macros.html.twig' as Helper %}
-{% form_theme form with ['OroFormBundle:Form:fields.html.twig', 'OroTagBundle:Form:fields.html.twig'] %}
+{% form_theme form with ['OroFormBundle:Form:fields.html.twig'] %}
 {% oro_title_set({params : {"%ticket.subject%": form.vars.value.subject }}) %}
 {% set formAction = path('diamante_ticket_update', { 'key': form.vars.value.key }) %}
 {% block head_script %}
@@ -50,8 +50,7 @@
                     form_row(form.source),
                     form_row(form.reporter),
                     form_row(form.assignee),
-                    form_row(form.attachmentsInput),
-                    form_row(form.tags)
+                    form_row(form.attachmentsInput)
                 ]
             }
         ]
